--- a/app/views/rapidfire/questions/_question.html.haml
+++ b/app/views/rapidfire/questions/_question.html.haml
@@ -2,5 +2,5 @@
 %td
   %ul.horizontal-list
     %li
-      = link_to "Delete", [question_group], :method => :delete, :remote => true,
+      = link_to "Delete", [question_group, question], :method => :delete, :remote => true,
         :class => "btn btn-small btn-danger"
