get javascript working for showing appropriate fields based on question type

--- a/app/views/rapidfire/questions/new.js.haml
+++ b/app/views/rapidfire/questions/new.js.haml
@@ -2,3 +2,4 @@ $("#js-modal .modal").modal('hide');
 
 $("#js-modal").html("#{escape_javascript(render :partial => 'js_form', :locals => {:question => @question})}");
 $("#js-modal .modal").modal();
+new Rapidfire.QuestionForm($("#js-modal #new_question"));
