--- a/app/views/rapidfire/questions/_js_form.html.haml
+++ b/app/views/rapidfire/questions/_js_form.html.haml
@@ -6,7 +6,7 @@
   .modal-body
     = simple_form_for [@question_group, question], :remote => true do |f|
       = f.input :type, :collection => ::Rapidfire::QuestionProxy::QUESTION_TYPES,
-        :include_blank => false, :input_html => { :class => "input-block-level" }
+        :include_blank => false, :input_html => { :class => "input-block-level", :id => "question_type" }
       = f.input :question_text, :input_html => { :class => "input-block-level" }
       = f.input :answer_options, :as => :text, :input_html => { :class => "input-block-level", :rows => 5 },
         :wrapper_html => { :id => "question_answer_options_wrapper" }
@@ -20,7 +20,7 @@
       = f.input :answer_greater_than_or_equal_to, :input_html => { :class => "input-block-level" },
         :wrapper_html => { :id => "question_answer_greater_than_or_equal_to_wrapper", :class => "hide" }
       = f.input :answer_less_than_or_equal_to, :input_html => { :class => "input-block-level" },
-        :wrapper_html => { :id => "question_answer_less_than_or_equal_to", :class => "hide" }
+        :wrapper_html => { :id => "question_answer_less_than_or_equal_to_wrapper", :class => "hide" }
       .control-inputs
         .controls
           = f.submit :class => "btn btn-primary"
