--- a/app/views/rapidfire/questions/create.js.haml
+++ b/app/views/rapidfire/questions/create.js.haml
@@ -5,3 +5,4 @@ $("#js-modal .modal").modal('hide');
 - else
   $("#js-modal").html("#{escape_javascript(render :partial => 'js_form', :locals => {:question => @question})}");
   $("#js-modal .modal").modal();
+  new Rapidfire.QuestionForm($("#js-modal #new_question"));
