--- a/app/views/rapidfire/questions/_question.html.haml
+++ b/app/views/rapidfire/questions/_question.html.haml
@@ -1,6 +1,10 @@
-%td= question.question_text
-%td
-  %ul.horizontal-list
-    %li
-      = link_to "Delete", [question_group, question], :method => :delete, :remote => true,
-        :class => "btn btn-small btn-danger"
+%tr{ :id => "question_#{question.id}" }
+  %td= question.question_text
+  %td
+    %ul.horizontal-list
+      %li
+        = link_to "Edit", [:edit, question.question_group, question], :remote => true,
+          :class => "btn btn-small btn-primary"
+      %li
+        = link_to "Delete", [question.question_group, question], :method => :delete, :remote => true,
+          :class => "btn btn-small btn-danger"
