--- a/app/views/rapidfire/questions/update.js.haml
+++ b/app/views/rapidfire/questions/update.js.haml
@@ -1,7 +1,7 @@
 $("#js-modal .modal").modal('hide');
 
 - if @question.errors.empty?
-  $("tbody").append("#{escape_javascript(render :partial => 'question', :locals => {:question => @question})}")
+  $("#question_#{@question.id}").replaceWith("#{escape_javascript(render :partial => 'question', :locals => {:question => @question})}")
 - else
   $("#js-modal").html("#{escape_javascript(render :partial => 'js_form', :locals => {:question => @question})}");
   $("#js-modal .modal").modal();
