--- a/app/views/rapidfire/question_groups/_question_group.html.haml
+++ b/app/views/rapidfire/question_groups/_question_group.html.haml
@@ -1,7 +1,9 @@
 %td= link_to question_group.name, question_group_questions_path(question_group)
 %td
   %ul.horizontal-list
-    %li= link_to "Answer Questions", "#", :class => "btn btn-small btn-info"
+    %li
+      = link_to "Answer Questions", new_question_group_answer_group_path(question_group),
+        :class => "btn btn-small btn-info"
     %li
       = link_to "Delete", [question_group], :method => :delete, :remote => true,
         :class => "btn btn-small btn-danger"
