--- a/app/views/rapidfire/answers/_checkbox.html.haml
+++ b/app/views/rapidfire/answers/_checkbox.html.haml
@@ -1,3 +1,2 @@
 = f.input :answer_text, :label => answer.question.question_text, :as => :check_boxes,
-  :collection => answer.question.options, :checked => f.object.answer_text.try(:split, ","),
-  :input_html => { :class => "input-block-level" }
+  :collection => answer.question.options, :checked => f.object.answer_text.try(:split, ",")
