--- a/app/views/rapidfire/answers/_date.html.haml
+++ b/app/views/rapidfire/answers/_date.html.haml
@@ -1,2 +1,1 @@
-= f.input :answer_text, :label => answer.question.question_text, :as => :string,
-  :input_html => { :class => "input-block-level" }
+= f.input :answer_text, :label => answer.question.question_text, :as => :string
