--- a/app/views/rapidfire/answers/_long.html.haml
+++ b/app/views/rapidfire/answers/_long.html.haml
@@ -1,2 +1,2 @@
 = f.input :answer_text, :label => answer.question.question_text, :as => :text,
-  :input_html => { :rows => 5, :class => "input-block-level" }
+  :input_html => { :rows => 5 }
