--- a/app/views/rapidfire/answers/_radio.html.haml
+++ b/app/views/rapidfire/answers/_radio.html.haml
@@ -1,2 +1,2 @@
 = f.input :answer_text, :label => answer.question.question_text, :as => :radio_buttons,
-  :collection => answer.question.options, :input_html => { :class => "input-block-level" }
+  :collection => answer.question.options
