--- a/app/views/rapidfire/question_groups/create.js.haml
+++ b/app/views/rapidfire/question_groups/create.js.haml
@@ -1,7 +1,6 @@
-$("#js-modal .modal").modal('hide');
+$("#js-form").empty();
 
 - if @question_group.errors.empty?
-  $("<tr>").attr("id", "question_group_{@question_group.id}").appendTo("tbody").html("#{escape_javascript(render :partial => 'question_group', :locals => {:question_group => @question_group})}")
+  $("tbody").append("#{escape_javascript(render partial: 'question_group', locals: {question_group: @question_group})}")
 - else
-  $("#js-modal").html("#{escape_javascript(render :partial => 'js_form', :locals => {:question_group => @question_group})}");
-  $("#js-modal .modal").modal();
+  $("#js-form").html("#{escape_javascript(render partial: 'js_form', locals: {question_group: @question_group})}");
