--- a/app/views/rapidfire/questions/_question.html.haml
+++ b/app/views/rapidfire/questions/_question.html.haml
@@ -3,8 +3,6 @@
   %td
     %ul.horizontal-list
       %li
-        = link_to "Edit", [:edit, question.question_group, question], :remote => true,
-          :class => "btn btn-small btn-primary"
+        = link_to "Edit", [:edit, question.question_group, question], :remote => true
       %li
-        = link_to "Delete", [question.question_group, question], :method => :delete, :remote => true,
-          :class => "btn btn-small btn-danger"
+        = link_to "Delete", [question.question_group, question], :method => :delete, :remote => true
