--- a/app/views/rapidfire/questions/index.html.haml
+++ b/app/views/rapidfire/questions/index.html.haml
@@ -1,18 +1,17 @@
 %h2
   Questions
-  .pull-right
-    = link_to "New Question", new_question_group_question_path(@question_group),
-      :remote => true, :class => "btn btn-primary btn-small"
+  = link_to "New Question", new_question_group_question_path(@question_group), remote: true
 %hr
 
-%table.table.table-striped.table-bordered
+#js-form
+
+%table
   %colgroup
     %col
-    %col{ :width => 250 }
+    %col{ width: 250 }
   %thead
     %tr
       %th Question
       %th
   %tbody
-    = render :partial => "question", :collection => @questions
-#js-modal
+    = render partial: "question", collection: @questions
