--- a/app/views/rapidfire/answers/_checkbox.html.haml
+++ b/app/views/rapidfire/answers/_checkbox.html.haml
@@ -1,2 +1,8 @@
-= f.input :answer_text, :label => answer.question.question_text, :as => :check_boxes,
-  :collection => answer.question.options, :checked => f.object.answer_text.try(:split, ",")
+= render partial: "rapidfire/answers/errors", locals: {answer: answer}
+
+= f.label :answer_text, answer.question.question_text
+= f.fields_for :answer_text do |af|
+  - answer.question.options.each do |option|
+    = af.label option do
+      = af.check_box nil, { id: nil, checked: checkbox_checked?(answer, option) }, option
+      = option
