--- a/app/views/rapidfire/answers/_radio.html.haml
+++ b/app/views/rapidfire/answers/_radio.html.haml
@@ -1,2 +1,7 @@
-= f.input :answer_text, :label => answer.question.question_text, :as => :radio_buttons,
-  :collection => answer.question.options
+= render partial: "rapidfire/answers/errors", locals: {answer: answer}
+
+= f.label :answer_text, answer.question.question_text
+- answer.question.options.each do |option|
+  = f.label "answer_text_#{option}", option do
+    = f.radio_button :answer_text, option
+    = option
