--- a/app/views/rapidfire/question_groups/_js_form.html.haml
+++ b/app/views/rapidfire/question_groups/_js_form.html.haml
@@ -1,5 +1,11 @@
 %h3= question_group.new_record? ? "New Group" : "Edit Group"
 
-= simple_form_for question_group, :remote => true do |f|
-  = f.input :name
+= form_for question_group, :remote => true do |f|
+  - if question_group.errors.any?
+    %ul
+      - question_group.errors.full_messages.each do |message|
+        %li= message
+
+  = f.label :name
+  = f.text_field :name
   = f.submit
