--- a/app/views/rapidfire/answers/_short.html.haml
+++ b/app/views/rapidfire/answers/_short.html.haml
@@ -1,1 +1,5 @@
-= f.input :answer_text, :label => answer.question.question_text, :as => :string
+= render partial: "rapidfire/answers/errors", locals: {answer: answer}
+
+= f.label :answer_text, answer.question.question_text
+= f.text_field :answer_text
+
