--- a/app/views/rapidfire/questions/edit.js.haml
+++ b/app/views/rapidfire/questions/edit.js.haml
@@ -1,2 +1,2 @@
 $("#js-form").html("#{escape_javascript(render partial: 'js_form', locals: {question: @question})}");
-new Rapidfire.QuestionForm($("#js-modal #new_question"));
+new Rapidfire.QuestionForm($("#js-form #js-question-form"));
