--- a/app/views/rapidfire/questions/index.html.erb
+++ b/app/views/rapidfire/questions/index.html.erb
@@ -1,10 +1,8 @@
 <h2>
   Questions
-  <%= link_to "New Question", new_question_group_question_path(@question_group), remote: true %>
+  <%= link_to "New Question", new_question_group_question_path(@question_group) %>
 </h2>
 <hr/>
-
-<div id="js-form"></div>
 
 <table>
   <colgroup>
