--- a/app/views/rapidfire/question_groups/index.html.erb
+++ b/app/views/rapidfire/question_groups/index.html.erb
@@ -1,12 +1,10 @@
 <h2>
   Question Groups
   <% if can_administer? %>
-    <%= link_to "New Group", new_question_group_path, remote: true %>
+    <%= link_to "New Group", new_question_group_path %>
   <% end %>
 </h2>
 <hr/>
-
-<div id="js-form"></div>
 
 <table>
   <colgroup>
