--- a/app/views/rapidfire/question_groups/_form.html.erb
+++ b/app/views/rapidfire/question_groups/_form.html.erb
@@ -1,6 +1,6 @@
 <h3><%= question_group.new_record? ? "New Group" : "Edit Group" %></h3>
 
-<%= form_for question_group, :remote => true do |f| %>
+<%= form_for question_group do |f| %>
   <%- if question_group.errors.any? %>
     <ul>
       <%- question_group.errors.full_messages.each do |message| %>
