--- a/app/views/rapidfire/questions/_question.html.erb
+++ b/app/views/rapidfire/questions/_question.html.erb
@@ -2,8 +2,8 @@
   <td><%= question.question_text %></td>
   <td>
     <ul class="horizontal-list">
-      <li><%= link_to "Edit", [:edit, question.question_group, question], remote: true %></li>
-      <li><%= link_to "Delete", [question.question_group, question], method: :delete, remote: true %></li>
+      <li><%= link_to "Edit", [:edit, question.question_group, question] %></li>
+      <li><%= link_to "Delete", [question.question_group, question], method: :delete %></li>
     </ul>
   </td>
 </tr>
