--- a/app/views/rapidfire/question_groups/_question_group.html.erb
+++ b/app/views/rapidfire/question_groups/_question_group.html.erb
@@ -10,6 +10,7 @@
     <ul class="horizontal-list">
       <li><%= link_to "Answer Questions", new_question_group_answer_group_path(question_group) %></li>
       <% if can_administer? %>
+        <li><%= link_to "Results", [:results, question_group] %></li>
         <li><%= link_to "Delete", [question_group], method: :delete %></li>
       <% end %>
     </ul>
