Adds a model for input elements with type range.
Changes the _range partial to invoke range_field on the field object and
to use the parent question validation rules, :greater_than_or_equal_to
and :less_than_or_equal_to, to set the min and max attributes on the
rendered input element.

--- a/app/views/rapidfire/answers/_range.html.erb
+++ b/app/views/rapidfire/answers/_range.html.erb
@@ -1,4 +1,4 @@
 <%= render partial: "rapidfire/answers/errors", locals: {answer: answer} %>
 
 <%= f.label :answer_text, answer.question.question_text %>
-<%= range_field(:answer_text, answer.question.options, in: 1..100) %>
+<%= f.range_field :answer_text, in: answer.question.rules[:greater_than_or_equal_to]..answer.question.rules[:less_than_or_equal_to], step: '1', value: '' %>
