Enable defaults and placeholders for text and textarea inputs

--- a/app/views/rapidfire/questions/_form.html.erb
+++ b/app/views/rapidfire/questions/_form.html.erb
@@ -15,6 +15,12 @@
   <%= f.label :question_text %>
   <%= f.text_field :question_text %>
 
+  <%= f.label :placeholder %>
+  <%= f.text_field :placeholder %>
+
+  <%= f.label :default_text %>
+  <%= f.text_field :default_text %>
+
   <%= f.label :answer_options %>
   <%= f.text_area :answer_options, rows: 5 %>
 
