--- a/app/views/rapidfire/questions/_form.html.erb
+++ b/app/views/rapidfire/questions/_form.html.erb
@@ -18,6 +18,12 @@
   <%= f.label :position %>
   <%= f.number_field :position %>
 
+  <%= f.label :placeholder %>
+  <%= f.text_field :placeholder %>
+
+  <%= f.label :default_text %>
+  <%= f.text_field :default_text %>
+
   <%= f.label :answer_options %>
   <%= f.text_area :answer_options, rows: 5 %>
 
