--- a/app/views/rapidfire/answers/_select.html.erb
+++ b/app/views/rapidfire/answers/_select.html.erb
@@ -1,4 +1,9 @@
 <%= render partial: "rapidfire/answers/errors", locals: {answer: answer} %>
 
 <%= f.label :answer_text, answer.question.question_text %>
-<%= f.select :answer_text, answer.question.options, include_blank: true %>
+<% if answer.question.question_dependency.present? %>
+  <%= f.select :answer_text, [], include_blank: false,
+      data: data_for_dependency(answer) %>
+<% else %>
+  <%= f.select :answer_text, answer.question.options, include_blank: true %>
+<% end %>
