--- a/app/views/rapidfire/surveys/_form.html.erb
+++ b/app/views/rapidfire/surveys/_form.html.erb
@@ -11,5 +11,9 @@
 
   <%= f.label :name %>
   <%= f.text_field :name %>
+
+  <%= f.label :introduction %>
+  <%= f.text_area :introduction %>
+
   <%= f.submit %>
 <% end %>
