Use number_field for position

--- a/app/views/rapidfire/questions/_form.html.erb
+++ b/app/views/rapidfire/questions/_form.html.erb
@@ -16,7 +16,7 @@
   <%= f.text_field :question_text %>
 
   <%= f.label :position %>
-  <%= f.text_field :position %>
+  <%= f.number_field :position %>
 
   <%= f.label :answer_options %>
   <%= f.text_area :answer_options, rows: 5 %>
