--- a/app/views/rapidfire/answers/_radio.html.erb
+++ b/app/views/rapidfire/answers/_radio.html.erb
@@ -1,6 +1,6 @@
 <%= render partial: "rapidfire/answers/errors", locals: {answer: answer} %>
 
-<%= f.label :answer_text, answer.question.question_text %>
+<%= f.span(:question_text) %>
 <%- answer.question.options.each do |option| %>
   <%= f.label "answer_text_#{option}", option do %>
     <%= f.radio_button :answer_text, option %>
