--- a/app/views/rapidfire/attempts/new.html.erb
+++ b/app/views/rapidfire/attempts/new.html.erb
@@ -5,7 +5,7 @@
 
 <%= form_for([@survey, @attempt_builder]) do |f| %>
   <%- @attempt_builder.answers.each do |answer| %>
-    <%= f.fields_for("#{answer.question.id}", answer) do |answer_form| %>
+    <%= f.fields_for("#{answer.question.id}", answer, builder: Rapidfire::AttemptFormBuilder) do |answer_form| %>
       <%= render_answer_form_helper(answer, answer_form) %>
     <% end %>
   <% end %>
