--- a/app/views/rapidfire/answers/_long.html.erb
+++ b/app/views/rapidfire/answers/_long.html.erb
@@ -1,4 +1,4 @@
 <%= render partial: "rapidfire/answers/errors", locals: {answer: answer} %>
 
 <%= f.label :answer_text, answer.question.question_text %>
-<%= f.text_area :answer_text, value: answer.question.default_text, :rows => 5, placeholder: answer.question.placeholder %>
+<%= f.text_area :answer_text, value: answer.answer_text || answer.question.default_text, :rows => 5, placeholder: answer.question.placeholder %>
