fix translations and make sure specs work

--- a/app/views/rapidfire/attempts/_form.html.erb
+++ b/app/views/rapidfire/attempts/_form.html.erb
@@ -1,4 +1,4 @@
-<h2><%= t('rapidfire.attempt.header') -%></h2>
+<h2><%= t('rapidfire.attempts.header') -%></h2>
 <hr/>
 
 <p><%= @survey.introduction %></p>
