--- a/app/views/rapidfire/attempts/new.html.erb
+++ b/app/views/rapidfire/attempts/new.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: 'form', locals: { submit_text: t('rapidfire.attempt.save') } %>
+<%= render partial: 'form', locals: { submit_text: t('rapidfire.attempts.save') } %>
