--- a/app/views/rapidfire/answers/_checkbox.html.erb
+++ b/app/views/rapidfire/answers/_checkbox.html.erb
@@ -1,5 +1,6 @@
 <%= render partial: "rapidfire/answers/errors", locals: {answer: answer} %>
 
+<div class="form-group">
 <%= f.label :answer_text, answer.question.question_text %>
 <%= f.fields_for :answer_text do |af| %>
   <%- answer.question.options.each_with_index do |option, index| %>
@@ -9,3 +10,4 @@
     <% end %>
   <% end %>
 <% end %>
+</div>
