--- a/app/views/rapidfire/surveys/_form.html.erb
+++ b/app/views/rapidfire/surveys/_form.html.erb
@@ -9,11 +9,15 @@
     </ul>
   <% end %>
 
+<div class="form-group">
   <%= f.label :name %>
   <%= f.text_field :name %>
+</div>
 
+<div class="form-group">
   <%= f.label :introduction %>
   <%= f.text_area :introduction %>
+</div>
 
   <%= f.submit %>
 <% end %>
