--- a/app/views/rapidfire/answers/_date.html.erb
+++ b/app/views/rapidfire/answers/_date.html.erb
@@ -1,4 +1,5 @@
 <%= render partial: "rapidfire/answers/errors", locals: {answer: answer} %>
-
+<div class="form-group">
 <%= f.label :answer_text, answer.question.question_text %>
 <%= f.text_field :answer_text %>
+</div>
