--- a/app/views/rapidfire/answers/_select.html.erb
+++ b/app/views/rapidfire/answers/_select.html.erb
@@ -1,4 +1,5 @@
 <%= render partial: "rapidfire/answers/errors", locals: {answer: answer} %>
-
+<div class="form-group">
 <%= f.label :answer_text, answer.question.question_text %>
 <%= f.select :answer_text, answer.question.options, include_blank: true %>
+</div>
