--- a/app/views/rapidfire/answers/_radio.html.erb
+++ b/app/views/rapidfire/answers/_radio.html.erb
@@ -1,11 +1,13 @@
 <%= render partial: "rapidfire/answers/errors", locals: {answer: answer} %>
 
-<%= f.label :answer_text, answer.question.question_text %>
-<%- answer.question.options.each_with_index do |option, index| %>
-  <%= f.label "answer_text_#{index}" do %>
-  <div class="form-group">
-    <%= f.radio_button :answer_text, option, id: "#{f.object_name.gsub(/\]\[|[^-a-zA-Z0-9:.]/, "_").sub(/_$/, "")}_answer_text_#{index}" %>
-    <%= option %>
-  </div>
+<div class="form-group">
+  <%= f.label :answer_text, answer.question.question_text %>
+  <%- answer.question.options.each_with_index do |option, index| %>
+    <span class="form-group sub">
+      <%= f.label "answer_text_#{index}" do %>
+        <%= f.radio_button :answer_text, option, id: "#{f.object_name.gsub(/\]\[|[^-a-zA-Z0-9:.]/, "_").sub(/_$/, "")}_answer_text_#{index}" %>
+        <%= option %>
+      <% end %>
+    </span>
   <% end %>
-<% end %>
+</div>
