--- a/app/views/rapidfire/surveys/index.html.erb
+++ b/app/views/rapidfire/surveys/index.html.erb
@@ -1,9 +1,14 @@
 <h2>
   Surveys
+</h2>
+<h3>
   <% if can_administer? %>
     <%= link_to "New Survey", new_survey_path %>
   <% end %>
-</h2>
+</h3>
+<h4>
+  <%= link_to t('Back to surveys'), surveys_path(@survey) %>
+</h4>
 <hr/>
 
 <table>
