--- a/app/views/rapidfire/surveys/index.html.erb
+++ b/app/views/rapidfire/surveys/index.html.erb
@@ -7,7 +7,7 @@
   <% end %>
 </h3>
 <h4>
-  <%= link_to t('Back to surveys'), surveys_path(@survey) %>
+  <%= link_to t('Back to home'), '/' %>
 </h4>
 <hr/>
 
@@ -19,7 +19,7 @@
   <thead>
     <tr>
       <th>Survey</th>
-      <th></th>
+      <th>Action</th>
     </tr>
   </thead>
   <tbody>
