Allow a survey to have custom content displayed after taking it

--- a/app/views/rapidfire/surveys/_form.html.erb
+++ b/app/views/rapidfire/surveys/_form.html.erb
@@ -15,5 +15,8 @@
   <%= f.label :introduction %>
   <%= f.text_area :introduction %>
 
+  <%= f.label :after_survey_content %>
+  <%= f.text_area :after_survey_content %>
+
   <%= f.submit %>
 <% end %>
