Allow people to edit their survey attributes

--- a/app/views/rapidfire/surveys/_survey.html.erb
+++ b/app/views/rapidfire/surveys/_survey.html.erb
@@ -11,6 +11,7 @@
       <li><%= link_to "Answer Questions", new_survey_attempt_path(survey) %></li>
       <% if can_administer? %>
         <li><%= link_to "Results", [:results, survey] %></li>
+        <li><%= link_to "Edit", edit_survey_path(survey) %></li>
         <li><%= link_to "Delete", survey, method: :delete %></li>
       <% end %>
     </ul>
