--- a/app/views/rapidfire/surveys/_survey.html.erb
+++ b/app/views/rapidfire/surveys/_survey.html.erb
@@ -1,6 +1,6 @@
 <tr id= "survey_<%= survey.id %>">
   <td>
-    <% if can_administer? %>
+    <% if current_user.can_administer? %>
       <%= link_to survey.name, survey_questions_path(survey) %>
     <% else %>
       <%= survey.name %>
@@ -9,7 +9,7 @@
   <td>
     <ul class="horizontal-list">
       <li><%= link_to "Answer Questions", new_survey_attempt_path(survey) %></li>
-      <% if can_administer? %>
+      <% if current_user.can_administer? %>
         <li><%= link_to "Results", [:results, survey] %></li>
         <li><%= link_to "Delete", survey, method: :delete %></li>
       <% end %>
