--- a/app/views/rapidfire/attempts/_form.html.erb
+++ b/app/views/rapidfire/attempts/_form.html.erb
@@ -3,7 +3,7 @@
 
 <p><%= @survey.introduction %></p>
 
-<%= form_for([@survey, @attempt_builder]) do |f| %>
+<%= form_for([@survey, @attempt_builder], url: rapidfire.survey_attempts_path(@survey, @attempt_builder)) do |f| %>
   <%- @attempt_builder.answers.each do |answer| %>
     <%= f.fields_for("#{answer.question.id}", answer) do |answer_form| %>
       <%= render_answer_form_helper(answer, answer_form) %>
