--- a/app/views/rapidfire/attempts/_form.html.erb
+++ b/app/views/rapidfire/attempts/_form.html.erb
@@ -1,7 +1,5 @@
 <div class="survey-attempt-form">
   <h2><%= t('rapidfire.attempts.header') -%></h2>
-  <hr/>
-
   <p class="survey-title"><%= @survey.introduction %></p>
 
   <%= form_for([@survey, @attempt_builder], url: rapidfire.survey_attempts_path(@survey, @attempt_builder)) do |f| %>
@@ -10,6 +8,6 @@
         <%= render_answer_form_helper(answer, answer_form) %>
       <% end %>
     <% end %>
-    <%= f.submit submit_text %>
+    <%= f.submit submit_text,  :class => 'btn btn-default' %>
   <% end %>
 </div>
