--- a/app/views/rapidfire/surveys/results.html.erb
+++ b/app/views/rapidfire/surveys/results.html.erb
@@ -1,5 +1,5 @@
 <h1>Results</h1>
-
+<%= link_to "Download CSV", params.merge(format: :csv) %>
 <%- @survey_results.each do |result| %>
   <div>
     <h4><%= result.question.question_text %></h4>
